welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:3: error: Missing closing brace `}' assumed here
while (!sortieTrouvee()) {
^Poucet:12: error: ';' expected but 'else' found.
	else if (Nbbiscuitpasse<=2) {
        ^